# GuiKeyStandalone

./: .gitignore  Cargo.toml  LLM.md  Makefile.toml  README.md
activity_generator_gui/: Cargo.toml  GENERATOR_GUIDE.md
activity_generator_gui/src/: app_state.rs  config_models.rs  errors.rs  generator_logic.rs  main.rs
activity_generator_gui/src/embedded_assets/server_package_content/templates/: base.html  error_page.html  logs_view.html
activity_monitor_client_core/: App.manifest  Cargo.toml  build.rs
activity_monitor_client_core/config/: client_settings.example.toml  client_settings.toml
activity_monitor_client_core/src/: app_config.rs  errors.rs  event_types.rs  internal_logger.rs  main.rs
activity_monitor_client_core/src/core_monitors/: clipboard_capture.rs  foreground_app.rs  keyboard_capture.rs  mod.rs  vk_utils.rs
activity_monitor_client_core/src/network/: data_sender.rs  encryption.rs  mod.rs
activity_monitor_client_core/src/p2p/: behaviour.rs  data_sender.rs  mod.rs  protocol.rs  swarm_manager.rs
activity_monitor_client_core/src/processing/: event_processor.rs  mod.rs
activity_monitor_client_core/src/services/: mod.rs  sync_manager.rs
activity_monitor_client_core/src/storage/: log_store.rs  mod.rs
activity_monitor_client_core/src/system_utils/: mod.rs  startup.rs
local_log_server/: Cargo.toml  local_server_config.example.toml
local_log_server/src/: app_config.rs  errors.rs  main.rs
local_log_server/src/application/: log_service.rs  mod.rs
local_log_server/src/domain/: event_types.rs  mod.rs
local_log_server/src/infrastructure/: database.rs  encryption.rs  mod.rs
local_log_server/src/p2p/: behaviour.rs  mod.rs  protocol.rs  swarm_manager.rs
local_log_server/src/presentation/: api_handlers.rs  mod.rs  web_ui_handlers.rs
local_log_server/static/css/: style.css
local_log_server/templates/: base.html  error_page.html  logs_view.html
