[package]
name = "activity_generator_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27.2"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.8"
# serde_json = "1.0" # Not needed if server config is also TOML
uuid = { version = "1.7.0", features = ["v4"] }
rand = "0.8.5"
hex = "0.4.3"
rfd = "0.14.0"
fs_extra = "1.3.0"
thiserror = "1.0.57"
chrono = "0.4.33" # For timestamp in panic log
include_dir = "0.7"

[build-dependencies]
# embed-resource = "1.7"