[package]
name = "activity_monitor_client_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = { version = "0.13", features = ["toml"] }
thiserror = "1.0"
tracing = "0.1"
async-stream = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
windows-sys = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
] }
winreg = "0.52"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4.3"
sha2 = "0.10"
futures = "0.3"
tempfile = "3.8"
async-trait = "0.1"

# libp2p dependencies
libp2p = { version = "0.55", features = [
    "tokio", "tls", "macros", "mdns", "kad", "identify", "request-response",
    "relay", "dcutr", "noise", "yamux", "tcp", "dns", "autonat"
] }

[build-dependencies]
embed-manifest = "1.4.0"

[[bin]]
name = "activity_monitor_client_core"
