[package]
name = "local_log_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
chrono = { version = "0.4.33", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rusqlite = { version = "0.30.0", features = ["bundled", "chrono", "uuid"] }
askama = "0.12.1" # Keep it simple, no extra features for now for 0.12.1
thiserror = "1.0.57"
hex = "0.4.3"
aes-gcm = "0.10.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
config = "0.13.4"
toml = "0.8.8"
bytes = "1.6.0"